adjusted meta data

--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Elena Volovicheva</title>
+	<title>Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio</title>
 	<meta name="description" content="Online Portfolio of Elena Volovicheva." />
 	<meta name="keywords" content="elena volovicheva, portfolio, designer, visual designer, web designer, designer berlin, front-end developer, front end developer"
 	/>
@@ -22,6 +22,9 @@
 		<!-- Outer grid (header, title, etc.) -->
 		<div class="grid-scrollable grid--outer">
 			<div class="title-wrap">
+				<div class="img-full-width-top-container">
+					<img src="img/cv-pic.jpg" class="img-full-width-top">
+				</div>
 				<h2 class="title">Talks and Workshops</h2>
 				<div class="cv-container">
 					<div class="cv-block-container">
@@ -295,10 +298,10 @@
 		<div class="mobile-footer">
 			<div class="footer-border-top"></div>
 			<div class="footer-p">
-				<p>Made by Elena Volovicheva</p>
+				<p>made by Elena Volovicheva</p>
 			</div>
 		</div>
-		<h3 class="fullview__title">Made by Elena Volovicheva</h3>
+		<h3 class="fullview__title">made by Elena Volovicheva</h3>
 	</section>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/TweenMax.min.js"></script>
