--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Animated Image Pieces | Demo: Entry | Codrops</title>
-		<meta name="description" content="An animated pieces effect for images with many possibilities" />
-		<meta name="keywords" content="animation, piece, fragment, box, css, javascript, demo, effect, web dev" />
-		<meta name="author" content="Codrops" />
+		<title>Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio</title>
+		<meta name="description" content="Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio" />
+		<meta name="keywords" content="elena volovicheva, portfolio, designer, visual designer, web designer, designer berlin, front-end developer, front end developer" />
+		<meta name="author" content="Elena Volovicheva" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
