--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Elena Volovicheva</title>
+	<title>Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio</title>
 	<meta name="description" content="Online Portfolio of Elena Volovicheva." />
 	<meta name="keywords" content="elena volovicheva, portfolio, designer, visual designer, web designer, designer berlin, front-end developer, front end developer"
 	/>
@@ -107,7 +107,6 @@
 					<div class="img-full-width-container">
 						<img src="img/ob-pic.png" class="img-full-width">
 					</div>
-					<div class="border-top"></div>
 					<div class="fullview__item-h3">
 						<span class="projects-item-counter">02</span>
 						<h3 class="fullview__item-title-body">HTML5 Banners</h3>
@@ -401,11 +400,11 @@
 				<div class="mobile-footer">
 					<div class="footer-border-top"></div>
 					<div class="footer-p">
-						<p>Made by Elena Volovicheva</p>
+						<p>made by Elena Volovicheva</p>
 					</div>
 				</div>
 			</div>
-			<h3 class="fullview__title">Made by Elena Volovicheva</h3>
+			<h3 class="fullview__title">made by Elena Volovicheva</h3>
 		</div>
 		<!--/fullview-->
 		<!-- Revealer element -->
