spelling Front-end

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio</title>
-	<meta name="description" content="Online Portfolio of Elena Volovicheva." />
+	<title>Elena Volovicheva. Designer / Artist / Front-end Developer. Portfolio</title>
+	<meta name="description" content="Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio" />
 	<meta name="keywords" content="elena volovicheva, portfolio, designer, visual designer, web designer, designer berlin, front-end developer, front end developer"
 	/>
 	<meta name="author" content="Elena Volovicheva" />
