--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio</title>
+		<title>Elena Volovicheva. Designer / Artist / Front-end Developer. Portfolio</title>
 		<meta name="description" content="Elena Volovicheva. Designer / Artist / Front-end developer. Portfolio" />
 		<meta name="keywords" content="elena volovicheva, portfolio, designer, visual designer, web designer, designer berlin, front-end developer, front end developer" />
 		<meta name="author" content="Elena Volovicheva" />
@@ -47,7 +47,7 @@
 						<span class="year">2018</span>
 					</div>
 						<div class="my_story-wrap">
-							<p>Designer /<br>Artist /<br> Frontend-Developer
+							<p>Designer /<br>Artist /<br> Front-end Developer
 							</p>
 						</div>
 						<!-- <div class="content__title-container">
