--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 					<div>
 						<h2 class="title">Elena Volovicheva</h2>
 						<div class="space-10"></div>
-						<!-- <span class="profession">designer / artist / frontend-developer</span> -->
 						<span class="subtitle">portfolio</span>
 						<span class="year">2018</span>
 					</div>
 						<div class="my_story-wrap">
 							<p>Designer /<br>Artist /<br> Front-end Developer
 							</p>
+							<div class="space-10"></div>
+							<span class="subtitle">Berlin</span>
 						</div>
 						<!-- <div class="content__title-container">
 							<h2 class="content__title">Explore</h2>
